KTrain topic modeling

--- a/02_Data_Tokenization.ipynb
+++ b/02_Data_Tokenization.ipynb
@@ -1737,12 +1737,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be5aea3b-50b5-4f19-b459-061d21450f1f",
+   "metadata": {},
+   "source": [
+    "## FURTHER CLEANING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da07fc74-409c-46b5-9d68-5027cbe2a4e9",
+   "id": "18c3a2e7-55b9-435a-8bf7-4333bb70d2a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# remove country names\n",
+    "# remove months\n"
+   ]
   }
  ],
  "metadata": {
