--- a/03_Topic_Modeling.ipynb
+++ b/03_Topic_Modeling.ipynb
@@ -5,7 +5,7 @@
    "id": "ae4028dc-2b7b-4050-8bf0-5dc5ca3d62fc",
    "metadata": {},
    "source": [
-    "# **Topic Modeling**"
+    "# **Topic Modeling on Full dataset sample**"
    ]
   },
   {
