Updated BERT Modeling, Targeted Entity Sentiment

--- a/053_Sentiment_Analysis_Overtime.ipynb
+++ b/053_Sentiment_Analysis_Overtime.ipynb
@@ -17621,6 +17621,24 @@
     "plt.show()\n",
     "fig.savefig('053_Figures/finai_pos.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "c3b6a887-1774-48fa-95e3-46fd1a1adb3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b4ac89-53cc-4c50-a406-a473bb9f038c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
