--- a/061_EntityExtraction_Spacy.ipynb
+++ b/061_EntityExtraction_Spacy.ipynb
@@ -22,7 +22,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b94c9b60-d8c7-4605-9e40-7f21063ea690",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -36,7 +38,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "0751f4e7-58f4-440d-9231-4c807df3e1d1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
