--- a/061_EntityExtraction_Spacy.ipynb
+++ b/061_EntityExtraction_Spacy.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e6aa99c9-07be-4cd2-96a5-aef05889b7e8",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4f82a944-2606-4664-ba5f-75b96072413f",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0a4777e0-4cb3-4c4d-bffa-97304fc90234",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "de71ef34-0253-4fdb-abf1-e400d54c162e",
    "metadata": {},
    "outputs": [],
@@ -753,10 +753,6 @@
    "execution_count": 10,
    "id": "178492df-3228-434e-a39e-5821695d3958",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2073,6 +2069,49 @@
     "PROD_trend.to_csv(\"PROD_Trend_ORG.csv\",index=False)\n",
     "PER_trend.to_csv(\"PER_Trend_ORG.csv\",index=False)\n",
     "NORM_trend.to_csv(\"NORM_Trend_ORG.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e46e6e4-c40f-4d13-801e-ccfe5fb0df43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Analyzing movement trends at a half yearly level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7ad3cd-5a8c-4f35-a346-8eb3c0994eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_ents_2(df):\n",
+    "\n",
+    "    # df['ENT_ORG']=df['ENT_ORG'].parallel_apply(ast.literal_eval)\n",
+    "    org_list = list(chain.from_iterable(df['ENT_ORG']))\n",
+    "    counter_org = Counter(org_list)\n",
+    "    top_20_org = counter_org.most_common(20)\n",
+    "    \n",
+    "    # df['ENT_PROD']=df['ENT_PROD'].parallel_apply(ast.literal_eval)\n",
+    "    prod_list = list(chain.from_iterable(df['ENT_PROD']))\n",
+    "    counter_prod = Counter(prod_list)\n",
+    "    top_20_prod = counter_prod.most_common(20)\n",
+    "    \n",
+    "    # df['ENT_PER']=df['ENT_PER'].parallel_apply(ast.literal_eval)\n",
+    "    per_list = list(chain.from_iterable(df['ENT_PER']))\n",
+    "    counter_per = Counter(per_list)\n",
+    "    top_20_per = counter_per.most_common(20)\n",
+    "    \n",
+    "    # df['ENT_NORP']=df['ENT_NORP'].parallel_apply(ast.literal_eval)\n",
+    "    norm_list = list(chain.from_iterable(df['ENT_NORP']))\n",
+    "    counter_norm = Counter(norm_list)\n",
+    "    top_20_norm = counter_norm.most_common(20)\n",
+    "    \n",
+    "    ent_trend_df=pd.DataFrame({'ORGANIZATION':top_20_org,'PRODUCT':top_20_prod,'PERSON':top_20_per, 'NORM':top_20_norm})\n",
+    "    return ent_trend_df\n"
    ]
   }
  ],
