Final Restructuring Commit

--- a/052_Sentiment_Analysis_Transf.ipynb
+++ b/052_Sentiment_Analysis_Transf.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "eed9c1b1-a2f7-469f-8fc0-b377ab2f6f19",
+   "metadata": {},
+   "source": [
+    "# **NB 5.2: Sentiment Analysis using Transformer**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "090f6446-d7a3-4150-ab3e-280b8bb560d9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Part 0: Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "8035ca05-4b3b-4193-9f6e-ff11b9eaaf8f",
@@ -83,9 +102,12 @@
   {
    "cell_type": "markdown",
    "id": "59dab5ad-b745-4a50-a5e6-ceb28e10340d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "### Importing transformer from hugging face hub"
+    "## Part 1: Importing transformer from hugging face hub"
    ]
   },
   {
@@ -213,10 +235,12 @@
   {
    "cell_type": "markdown",
    "id": "46465c6d-ee8c-4e57-b992-361ac7358d56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "-----\n",
-    "### Predicting sentiments for our dataframe"
+    "## Part 2: Predicting sentiments for our dataframe"
    ]
   },
   {
@@ -1128,14 +1152,6 @@
     "pd.options.display.max_colwidth=None\n",
     "df_filt_2023[df_filt_2023['sent_label']==0][['clean_title','sent_probs']].sample(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f88b1da-dc00-4ad8-923e-ce110e4f0d61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
