--- a/061_EntityExtraction_Spacy.ipynb
+++ b/061_EntityExtraction_Spacy.ipynb
@@ -5,17 +5,18 @@
    "id": "b23b7367-0f34-46d7-9f11-bde5542085ee",
    "metadata": {},
    "source": [
-    "# Entity Extraction - 2020 file was saved as 2021 by mistake"
+    "# NB 6.1: Entity Extraction"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e3305d02-cd1a-45a2-9056-67a5f7396996",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Importing Libraries"
+    "## Part 0: Importing Libraries"
    ]
   },
   {
@@ -181,6 +182,17 @@
     "from tqdm import tqdm\n",
     "from collections import Counter\n",
     "from itertools import chain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e999d4bc-b5f0-4adb-a6ea-b1e016119031",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Part 1: Running NER for each year"
    ]
   },
   {
@@ -497,178 +509,6 @@
     "\n",
     "##SAVED AS THE WRONG FILE NAME BY MISTAKE, CORRECT LATER\n",
     "df_filt_2020.to_csv('gs://nlp_final_project_kshitijm/00_Data/NLP_FP_Data5_2021_Topics_Sentiments_NER.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "6a310ed3-af61-4c6f-af4e-ab0effedd02c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Organization: AI, Count: 37756\n",
-      "Organization: V19, Count: 28787\n",
-      "Organization: Google, Count: 20518\n",
-      "Organization: Microsoft, Count: 14155\n",
-      "Organization: IBM, Count: 13379\n",
-      "Organization: Artificial Intelligence, Count: 12495\n",
-      "Organization: GR, Count: 11260\n",
-      "Organization: Facebook, Count: 9600\n",
-      "Organization: Artificial Intelligence AI, Count: 7383\n",
-      "Organization: Amazon, Count: 6893\n",
-      "Organization: Machine Learning, Count: 6402\n",
-      "Organization: Intel, Count: 6191\n",
-      "Organization: Apple, Count: 5274\n",
-      "Organization: ML, Count: 4460\n",
-      "Organization: AsiaPacific, Count: 4086\n",
-      "Organization: Healthcare, Count: 3892\n",
-      "Organization: Samsung, Count: 3010\n",
-      "Organization: Twitter, Count: 2701\n",
-      "Organization: Oracle, Count: 2699\n",
-      "Organization: IBM Corporation, Count: 2665\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import chain\n",
-    "df_filt_2020_ent_orgs = list(chain.from_iterable(df_filt_2020['ENT_ORG']))\n",
-    "\n",
-    "counter = Counter(df_filt_2020_ent_orgs)\n",
-    "top_20 = counter.most_common(20)\n",
-    "for item, count in top_20:\n",
-    "    print(f\"Organization: {item}, Count: {count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "90b67a28-3a0b-4f81-89e4-07af0bb3d33d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Products: AI, Count: 70971\n",
-      "Products: V19, Count: 2601\n",
-      "Products: AIdriven, Count: 1194\n",
-      "Products: Twitter YouTube, Count: 1113\n",
-      "Products: JavaScript, Count: 984\n",
-      "Products: SE, Count: 718\n",
-      "Products: Galaxy, Count: 669\n",
-      "Products: YouTube, Count: 572\n",
-      "Products: TensorFlow, Count: 532\n",
-      "Products: Global AI, Count: 459\n",
-      "Products: HPC, Count: 443\n",
-      "Products: Discovery, Count: 433\n",
-      "Products: Javascript Course, Count: 422\n",
-      "Products: MasteryData ScienceData, Count: 422\n",
-      "Products: Facebook, Count: 390\n",
-      "Products: CRM, Count: 369\n",
-      "Products: A100, Count: 366\n",
-      "Products: FoodProduct, Count: 352\n",
-      "Products: Xilinx, Count: 332\n",
-      "Products: Windows 10, Count: 326\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import chain\n",
-    "df_filt_2020_ent_prods = list(chain.from_iterable(df_filt_2020['ENT_PROD']))\n",
-    "\n",
-    "counter = Counter(df_filt_2020_ent_prods)\n",
-    "top_20 = counter.most_common(20)\n",
-    "for item, count in top_20:\n",
-    "    print(f\"Products: {item}, Count: {count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7afaa23e-abb5-4412-b760-0478432d195e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Person: Size, Count: 3979\n",
-      "Person: Trump, Count: 3283\n",
-      "Person: Instagram, Count: 1360\n",
-      "Person: Middle EastAfrica, Count: 1277\n",
-      "Person: Biden, Count: 1046\n",
-      "Person: Richests Richests, Count: 1016\n",
-      "Person: Gebru, Count: 886\n",
-      "Person: Ai Weiwei, Count: 857\n",
-      "Person: Musk, Count: 808\n",
-      "Person: Elon Musk, Count: 779\n",
-      "Person: Trumps, Count: 776\n",
-      "Person: Busco, Count: 774\n",
-      "Person: asistencia tcnica para mi solucin de cuidados de salud Busco, Count: 774\n",
-      "Person: Donald Trump, Count: 704\n",
-      "Person: Pichai, Count: 647\n",
-      "Person: BFSI, Count: 613\n",
-      "Person: Kyle Wiggers, Count: 587\n",
-      "Person: Sundar Pichai, Count: 575\n",
-      "Person: Jim Thorpe, Count: 564\n",
-      "Person: Mark My ServicesAll, Count: 525\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import chain\n",
-    "df_filt_2020_ent_pers = list(chain.from_iterable(df_filt_2020['ENT_PER']))\n",
-    "\n",
-    "counter = Counter(df_filt_2020_ent_pers)\n",
-    "top_20 = counter.most_common(20)\n",
-    "for item, count in top_20:\n",
-    "    print(f\"Person: {item}, Count: {count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c2e3646e-a3a1-42db-a242-618fa3f40663",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NORP: Chinese, Count: 4344\n",
-      "NORP: American, Count: 1869\n",
-      "NORP: European, Count: 1783\n",
-      "NORP: British, Count: 1654\n",
-      "NORP: Canadian, Count: 1486\n",
-      "NORP: French, Count: 1077\n",
-      "NORP: Americans, Count: 860\n",
-      "NORP: German, Count: 847\n",
-      "NORP: Hindu, Count: 742\n",
-      "NORP: Tamil, Count: 541\n",
-      "NORP: Asian, Count: 513\n",
-      "NORP: ian, Count: 446\n",
-      "NORP: RemoteMoneyAll, Count: 444\n",
-      "NORP: African, Count: 437\n",
-      "NORP: Canadians, Count: 434\n",
-      "NORP: EUs, Count: 433\n",
-      "NORP: Irish, Count: 423\n",
-      "NORP: Democratic, Count: 398\n",
-      "NORP: Popular, Count: 393\n",
-      "NORP: North American, Count: 363\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import chain\n",
-    "df_filt_2020_ent_norp = list(chain.from_iterable(df_filt_2020['ENT_NORP']))\n",
-    "\n",
-    "counter = Counter(df_filt_2020_ent_norp)\n",
-    "top_20 = counter.most_common(20)\n",
-    "for item, count in top_20:\n",
-    "    print(f\"NORP: {item}, Count: {count}\")"
    ]
   },
   {
@@ -1032,6 +872,17 @@
     "top_20_org_2021, top_20_prod_2021, top_20_per_2021, top_20_norm_2021 = get_top_ents(df_filt_2021)\n",
     "top_20_org_2022, top_20_prod_2022, top_20_per_2022, top_20_norm_2022 = get_top_ents(df_filt_2022)\n",
     "top_20_org_2023, top_20_prod_2023, top_20_per_2023, top_20_norm_2023 = get_top_ents(df_filt_2023)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0330774-d44e-4ff1-8df8-73a2594a3a88",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Part 2: Yearly Results"
    ]
   },
   {
@@ -2069,16 +1920,6 @@
     "PROD_trend.to_csv(\"PROD_Trend_ORG.csv\",index=False)\n",
     "PER_trend.to_csv(\"PER_Trend_ORG.csv\",index=False)\n",
     "NORM_trend.to_csv(\"NORM_Trend_ORG.csv\",index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e46e6e4-c40f-4d13-801e-ccfe5fb0df43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Analyzing movement trends at a half yearly level"
    ]
   },
   {
