--- a/01_Data_Ingestion.ipynb
+++ b/01_Data_Ingestion.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ce3ca94e-b212-4a92-9501-ade921575322",
+   "metadata": {},
+   "source": [
+    "# NB1: Data Ingestion, Initial Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "962133ca-439e-4da9-a913-f97801e4c6a2",
@@ -156,16 +164,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d544335b-1d07-4b34-a5db-15deb479991a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Checking for language"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "cc976afa-5731-475d-802a-718e8ba02d2d",
    "metadata": {},
@@ -183,6 +181,7 @@
     }
    ],
    "source": [
+    "# Checking for language\n",
     "df_news_final_project['language'].value_counts()\n",
     "# All news articles are in English Language"
    ]
@@ -611,9 +610,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "tf2-gpu.2-8.m108",
+   "name": "tf2-gpu.2-11.m108",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-8:m108"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-11:m108"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -630,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
